correcciones de Sonar